# AtCoder

./: .gitignore  CMakeLists.txt  template.cpp  template.rb
APG4b/: .gitignore  a.cpp  b.cpp  d.cpp  e.cpp  f.cpp  g.cpp  h.cpp  i.cpp  j.cpp  k.cpp  l.cpp  m.cpp  n.cpp  o.cpp  p.cpp  r.cpp  s.cpp  t.cpp  u.cpp  v.cpp
abc/042/: CMakeLists.txt  a.cpp  b.cpp
abc/043/: CMakeLists.txt  a.cpp  b.cpp
abc/044/: CMakeLists.txt  a.cpp  b.cpp
abc/045/: CMakeLists.txt
abc/046/: a.cpp  b.cpp
abc/131/: CMakeLists.txt  c.cpp
abc/195/: CMakeLists.txt  a.cpp  b.cpp
abc/196/: CMakeLists.txt  a.cpp  b.cpp
abc/197/: CMakeLists.txt  a.cpp  b.cpp
abc/198/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
abc/199/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
abc/200/: CMakeLists.txt  a.cpp  b.cpp
abc/201/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
abc/202/: CMakeLists.txt  a.cpp  b.cpp  c.cpp
abc/test/: CMakeLists.txt  a01.cpp  a02.cpp  a03.cpp  a04.cpp  a05.cpp  a06.cpp  a07.cpp  a08.cpp  b01.cpp  b02.cpp  b03.cpp
abc/zone2021/: CMakeLists.txt  a.cpp  b.cpp  d.cpp  test.cpp
abc/zone2021_2nd/: CMakeLists.txt  a.cpp  b.cpp  d.cpp
abs/: CMakeLists.txt  a01.cpp  a02.cpp  a03.cpp  b01.cpp
aoj/: CMakeLists.txt  ITP1_1_B.cpp  ITP1_1_C.cpp  ITP1_1_D.cpp  ITP1_2_A.cpp  ITP1_2_B.cpp  ITP1_2_C.cpp  ITP1_2_D.cpp  ITP1_3_A.cpp  ITP1_3_B.cpp  ITP1_3_C.cpp  ITP1_3_D.cpp  ITP1_4_A.cpp  ITP1_4_B.cpp  ITP1_4_C.cpp  ITP1_4_D.cpp  ITP1_5_A.cpp  ITP1_5_B.cpp  ITP1_5_C.cpp  ITP1_5_D.cpp  ITP1_6_A.cpp  ITP1_6_B.cpp
python/: template.py
python/ABS/: 086A.py  a.py
python/APG4bPython/: ex6.py  (+2 more)
typical90/: 004.cpp  CMakeLists.txt
(+7 files in other folders)
