cmake_minimum_required(VERSION 3.14)
project(APG4b)

set(CMAKE_CXX_STANDARD 14)

# ABC TEST
#add_executable(abc_test_a01 a01.cpp)
#add_executable(abc_test_a01 a01.cpp)
#add_executable(abc_test_a02 a02.cpp)
#add_executable(abc_test_a03 a03.cpp)
#add_executable(abc_test_a04 a04.cpp)
#add_executable(abc_test_a05 a05.cpp)
#add_executable(abc_test_a06 a06.cpp)
#add_executable(abc_test_a07 a07.cpp)
#add_executable(abc_test_a08 a08.cpp)
#add_executable(abc_test_b01 b01.cpp)
#add_executable(abc_test_b02 b02.cpp)
#add_executable(abc_test_b03 b03.cpp)

